@@ -15,6 +15,7 @@ BUILDABLE_REFS = \
 REFERENCES = \
 	$(foreach ref,$(BUILDABLE_REFS),-r:$(ref))	\
 	-r:System.Data.dll	\
+	-r:System.Web.dll	\
 	-r:System.Web.Services.dll
 
 $(OUT): $(SOURCES) $(BUILDABLE_REFS)
